--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lobechat-plugin-boilerplate",
-  "version": "2.0.0",
+  "name": "school-attendance-analytics",
+  "version": "1.0.0",
   "private": true,
-  "description": "Production-ready Avaca plugin boilerplate with framework-business separation",
+  "description": "School Attendance Analytics Plugin for LobeChat - Standard Implementation",
   "homepage": "https://github.com/your-org/lobechat-plugin-boilerplate",
   "repository": "https://github.com/your-org/lobechat-plugin-boilerplate.git",
   "workspaces": [
